log
Thu 28 Sep 2023 05:01:31 PM UTC: 
 tests:  0|4
total_score: 0/70
23d2f16
Thu 28 Sep 2023 05:05:15 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd42c4f
